<resources>
    <string name="app_name">coursework</string>
    <string name="greetings">Войдите в аккаунт</string>
    <string name="greetingsReg">Регистрация</string>
    <string name="textLogin">Введите логин</string>
    <string name="textEmail">Введите email</string>
    <string name="textPassword">Введите пароль</string>
    <string name="textName">Введите имя</string>
    <string name="textPhoneNumber">Введите телефон</string>
    <string name="textAddress">Введите адрес</string>
    <string name="textButtonLog">Войти</string>
    <string name="textButtonReg">Зарегистрироваться</string>
    <string name="ButtonCatalog">Каталог</string>
    <string name="ButtonBasket">Корзина</string>
    <string name="ButtonAccount">Профиль</string>
    <string name="ButtonSetting">Поддержка</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="yourEmail">Ваш email</string>
    <string name="yourSex">Ваш пол</string>
    <string name="exitAccount">Выйти из аккаунта</string>
    <string name="deleteAccount">Удалить аккаунт</string>
    <string name="hideInformation">Дополнительная информация</string>
    <string name="pageProfile">Мои данные</string>
    <string name="pageBasket">Корзина</string>
    <string name="pageCatalog">Каталог</string>
    <string name="pageSettings">Поддержка</string>
    <string name="pageChangeProfile">Изменение данных</string>
    <string name="buttonChangePhoto">Изменить фото</string>
    <string name="sexMan">Мужчина</string>
    <string name="sexWoman">Женщина</string>
    <string name="sexNull">Не указан</string>
    <string name="buttonSave">Сохранить</string>
    <string name="basket">Моя корзина</string>
    <string name="delivery">Доставка</string>
    <string name="wishlist">Мой список желаемого</string>
    <string name="purchases">Мои покупки</string>
    <string name="textNull">Не указан</string>
    <string name="buyThis">Купить</string>
    <string name="textSupport">Вопросы? Обратитесь к нам</string>
    <string name="textTheme">Изменить тему</string>
    <string name="textEmptyWishlist">Добавляйте товары сюда, чтобы увидеть их здесь</string>
    <string name="textEmptyPurchases">Пока вы ничего не купили</string>
    <string name="textEmptyBasket">Корзина пустая :(</string>
    <string name="textContact">Дополнительная информация компании</string>
    <string name="textConfident">Политика конфиденциальности</string>
    <string name="saveConfirm">Сохранено успешно</string>
    <string name="warningNotFullData">Не все поля заполнены</string>
    <string name="warningNotHaveThisUser">Неверно заполнены данные</string>
    <string name="warningAnotherUser">Такой пользователь уже существует</string>
    <string name="amountNull">x0</string>
    <string name="TextPay">Оплатить</string>
    <string name="webLinkConfident">https://performia-test.ru/policy</string>
    <string name="textPageContact">Информация о компании</string>
    <string name="webLinkContact">https://alkmanistik.github.io/</string>
    <string name="textCall">Позвонить в поддержку</string>
    <string name="textWriteEmail">Написать нам на почту</string>
    <string name="deleteFromList">Удалить из списка</string>
    <string name="statusDone">Доставлено</string>
    <string name="statusDelivery">Отправлено</string>
    <string name="changeAmount">Изменить количество</string>
    <string name="textChangeToDone">Товар получен</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="addToWishlist">Добавлен в список желаемого</string>
    <string name="deleteFromWishlist">Удалён из списка желаемого</string>
    <string name="nowInWishlist">Уже лежит в списке желаемого</string>

    <string name="categoryChair">Стулья</string>
    <string name="categorySofa">Диваны</string>
    <string name="categoryTable">Столы</string>
    <string name="categoryAccessories">Аксессуары</string>
    <string name="resetFilter">Сбросить</string>
    <string name="sortName">По названию</string>
    <string name="sortPrice">По цене</string>
    <string name="textAsc">А - Я</string>
    <string name="textDesc">Я - А</string>
    <string name="textAscPrice">По возрастанию</string>
    <string name="textDescPrice">По убыванию</string>
    <string name="log">Логин</string>
    <string name="pas">Пароль</string>
    <string name="email">Электронный адрес</string>
    <string name="warningMinLength">%1$s должен состоять минимум из %2$d символов.</string>
    <string name="warningMaxLength">%1$s должен состоять максимум из %2$d символов.</string>
    <string name="warningEmail">Неправильно введён адрес электронной почты.</string>
    <string name="warningErrorPattern">%1$s должен состоять из латинских букв, цифр и символов ._-</string>
</resources>