<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_catalog">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.courcework.Catalog"
        android:label="@string/ButtonCatalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.courcework.Basket"
        android:label="@string/ButtonBasket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.courcework.Profile"
        android:label="@string/ButtonAccount"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.courcework.Settings"
        android:label="@string/ButtonSetting"
        tools:layout="@layout/fragment_settings" />
</navigation>