<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorText"
    tools:context=".RegActivity">
    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/greetingsReg"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        android:textColor="@color/colorBack"/>

    <EditText
        android:id="@+id/textLogin"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/textLogin"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBack"
        android:textColorHint="@color/colorBack"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/textEmail"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBack"
        android:textColorHint="@color/colorBack"/>

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/textPassword"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBack"
        android:textColorHint="@color/colorBack"/>

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/textButtonReg"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorBack"/>

    <Button
        android:id="@+id/textSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/textButtonLog"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:textColor="@color/colorBack"
        android:backgroundTint="@color/colorText"/>
</LinearLayout>