<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/buttonWishlist"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/none"
        android:contentDescription="@string/textNull"
        android:elevation="10dp"
        android:src="@drawable/baseline_favorite_border_page"
        app:layout_constraintEnd_toEndOf="@+id/cardProduct"
        app:layout_constraintTop_toTopOf="@+id/cardProduct" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProduct"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorDefault"
        android:layout_marginHorizontal="70dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test_product" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/sexNull"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:layout_marginHorizontal="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingTop="14dp"
                    android:text="0 ₽"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/productButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/none"
                    android:contentDescription="@string/buyThis"
                    android:src="@drawable/baseline_delivery_dining_24" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>